<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.perspective.inszap.Descarga" >
    
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:layout_gravity="center">

        <ImageView
            android:id="@+id/ivLogoD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" 
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/sistema"
            android:layout_marginTop="10dp"
            android:visibility="visible"/> 
        
    	<TextView 
        	android:id="@+id/titleD"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:paddingTop="10dp"
        	android:paddingBottom="10dp"
        	android:text="@string/sistema"
        	android:layout_below="@id/ivLogoD"
        	android:gravity="center"
        	style="@style/titleR"/>
    	
    	<ImageView 
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/linea" 
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/sistema"/>
    
    </RelativeLayout>
    
	<ScrollView 
        android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:layout_below="@id/rl">
    	
	    <LinearLayout 
	         android:layout_width="fill_parent"
    		 android:layout_height="wrap_content"
    		 android:gravity="center"
    		 android:orientation="vertical">
    	
        	<Button 
            	android:id="@+id/btnInfraccion"
            	style="@style/BotonI"
            	android:text="@string/btn_infraccion"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="10dp"/>

        	<Button
            	android:id="@+id/btnDescargarDato"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/descarga_datos"
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="40dp"/>
            
        	<Button
            	android:id="@+id/btnDescargaFoto"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/descarga_foto"
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"/>
        	
        	<Button
            	android:id="@+id/btnConsultar"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/title_activity_consultar_infracciones"
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:visibility="gone"/>
        	
        	<Button
            	android:id="@+id/btnDescargaApp"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/d_app"
            	android:layout_marginLeft="20dp"
            	android:layout_marginRight="20dp"
            	android:layout_marginTop="20dp"/>
            
        
        	<Button
            	android:id="@+id/btnActualizar"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/actualizacion" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"/>
        	
        	<Button
            	android:id="@+id/btnConsultarLicencia"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/consultar_licencias" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:visibility="visible"/>
        	
        	<Button
            	android:id="@+id/btnConfig"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/config" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:visibility="visible"/>
        	
        	<Button
            	android:id="@+id/btnReimprimir1"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/reimprimir" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:visibility="visible"/>
        	
        	<Button
            	android:id="@+id/btnPrueba"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/imprimir" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:visibility="gone"/>
        
        	<Button
            	android:id="@+id/btnSalir"
            	style="@style/Boton"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/salir" 
            	android:layout_marginLeft="10dp"
            	android:layout_marginRight="10dp"
            	android:layout_marginTop="20dp"
            	android:layout_marginBottom="20dp"/>
        	
        </LinearLayout>
    
    </ScrollView>

</RelativeLayout>
