<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.perspective.inszap.MainActivity" >

   	 <RelativeLayout
   	     android:id="@+id/rl"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:layout_gravity="center"> 

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" 
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/sistema"
            android:visibility="visible"/>  
        
    	<TextView 
        	android:id="@+id/title"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:paddingTop="10dp"
        	android:paddingBottom="10dp"
        	android:text="@string/sistema"
        	android:gravity="center"
        	android:layout_below="@id/ivLogo"
        	style="@style/titleR"/>
    	
    	<ImageView 
    	    android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/linea"
            android:contentDescription="@string/sistema" />
    
    </RelativeLayout>
    
    <ScrollView android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@id/rl">
    
    	<RelativeLayout 
        	android:id="@+id/llCon"
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center">
    	
        	<TextView 
	            android:id="@+id/tvDireccion"
    	        android:layout_width="110dp"
        	    android:layout_height="wrap_content"
            	android:text="@string/direccion"
	            android:layout_marginTop="30dp"
        	    android:layout_alignParentLeft="true"
        	    android:gravity="center"
        	    android:layout_marginLeft="10dp"
            	style="@style/SubtitleR"/>
	        
    	    <Spinner 
        	    android:id="@+id/spDireccion"
            	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
    	        android:prompt="@string/iden"
        	    android:layout_toRightOf="@+id/tvDireccion"
        	    android:layout_marginTop="10dp"
            	android:layout_alignParentRight="true"
            	android:layout_marginRight="10dp"/>
        
	        <TextView 
    	        android:id="@+id/tvUsuario"
        	    android:layout_width="110dp"
            	android:layout_height="wrap_content"
	            android:text="@string/usuario"
            	android:layout_below="@+id/spDireccion"
            	android:layout_marginTop="25dp"
    	        android:layout_alignParentLeft="true"
    	        android:gravity="center"
    	        android:layout_marginLeft="10dp"
        	    style="@style/SubtitleR"/>
        
	        <Spinner 
    	        android:id="@+id/spUsuario"
        	    android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
	            android:prompt="@string/iden"
    	        android:layout_toRightOf="@+id/tvUsuario"
        	    android:layout_below="@+id/spDireccion"
        	    android:layout_marginTop="5dp"
        	    android:layout_marginRight="10dp"
            	android:layout_alignParentRight="true"/>
        
	        <TextView 
    	        android:id="@+id/tvcontrasena"
        	    android:layout_width="110dp"
            	android:layout_height="wrap_content"
        	    android:layout_below="@+id/spUsuario"
            	android:text="@string/contrasena"
	            android:gravity="center"
	            android:layout_marginTop="25dp"
	            android:layout_marginLeft="10dp"
    	        style="@style/SubtitleR"/>
        
        	 <EditText 
            	android:id="@+id/etContrasena"
	            android:layout_width="wrap_content"
    	        android:layout_height="70dp"
        	    android:hint="@string/contrasena"
            	android:inputType="textPassword"
	            android:layout_below="@+id/spUsuario"
    	        android:layout_toRightOf="@+id/tvcontrasena"
    	        android:layout_marginTop="5dp"
        	    android:layout_gravity="center"
            	/>
         
	         <Button 
    	         android:id="@+id/btnIngresar"
        	     android:layout_width="wrap_content"
            	 android:layout_height="70dp"
	             android:layout_below="@id/spUsuario"
    	         android:layout_toRightOf="@id/etContrasena"
        	     android:text="@string/ingresar"
            	 android:layout_alignParentRight="true"
            	 android:layout_marginTop="5dp"
            	 android:layout_marginRight="10dp"
	             style="@style/Boton"/>
        
    	</RelativeLayout>
    </ScrollView>
</RelativeLayout>
